--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 
         <div class="qr-frame" onclick="zoomQR()">
            <span></span> <!-- Span for bottom corners -->
-            <img id="qrisImage" src="https://img1.pixhost.to/images/5579/596100630_skyzopedia.jpg" alt="QRIS Datastream">
+            <img id="qrisImage" src="https://files.catbox.moe/8230ix.jpg" alt="QRIS Datastream">
         </div>
 
         <p class="subtitle" style="margin-top: 15px; font-size: 0.9rem;">Payment Qris</p>
