--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
     </div>
 
     <div class="page hidden" id="payment"> <!-- Payment page hidden initially -->
-        <h1>PAYMENT Flayy</h1>
+        <h1>PAYMENT FLAYY</h1>
         <p class="subtitle">Choose preferred secure channel. Scan datastream below or use direct transfer coordinates.</p>
 
         <div class="qr-frame" onclick="zoomQR()">
